...
                  child: Center(
                    child: SingleChildScrollView(
                      padding: const EdgeInsets.all(24),
                      child: Column(
                        mainAxisAlignment: MainAxisAlignment.center,
                        children: [
                          // Onglets Login/Inscription
                          Center(
                            child: ConstrainedBox(
                              constraints: const BoxConstraints(maxWidth: 550),
                              child: Container(
                                height: 50,
                                decoration: BoxDecoration(
...
