...
            bubbleSize: bubbleSize,
          ),
          _buildNavItem(
            context,
            icon: Icons.settings_outlined,
            activeIcon: Icons.settings,
            label: 'Profil',
            index: 3,
            iconSize: iconSize,
            fontSize: fontSize,
            bubbleSize: bubbleSize,
          ),
        ],
...
